# CacheSimulator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh  build_macos.sh  cachesim  cachesim.cpp  makefile
configs/: README.md  full_features.json  high_performance.json  multiprocessor_4core.json  multiprocessor_system.json  nru_optimized.json  victim_cache_config.json  write_intensive.json  write_optimized.json
docs/: Doxyfile.in  README.md  design.md  v1.1.0_complete_update.md
docs/developer/: architecture.md  contributing.md
docs/features/: multiprocessor.md  replacement-policies.md  v1.2.0-features.md  victim-cache.md
docs/user/: cli-reference.md  configuration.md  examples.md  getting-started.md  user-guide.md
scripts/: README.md  build_all.sh  create_release.sh  run_benchmarks.sh  run_simulations.sh  validate_traces.sh
src/: main.cpp
src/core/: adaptive_prefetcher.cpp  adaptive_prefetcher.h  cache.cpp  cache.h  cache_block.h  memory_hierarchy.cpp  memory_hierarchy.h  memory_pool.h  mesi_protocol.cpp  mesi_protocol.h  replacement_policy.h  stream_buffer.cpp  stream_buffer.h  stride_predictor.cpp  stride_predictor.h  victim_cache.h  write_policy.cpp  write_policy.h
src/core/multiprocessor/: coherence_controller.cpp  coherence_controller.h  interconnect.cpp  interconnect.h  processor_core.cpp  processor_core.h
src/utils/: benchmark.h  config_utils.cpp  config_utils.h  logger.h  parallel_executor.h  profiler.h  statistics.h  trace_parser.cpp  trace_parser.h  trace_utils.cpp  trace_utils.h  visualization.h
tests/: README.md
tests/integration/: integration_test_v1_2_0.cpp  known_traces.cpp
tests/performance/: cache_performance_test.cpp  multiprocessor_performance_test.cpp  victim_cache_performance_test.cpp
tests/unit/: memory_hierarchy_test.cpp  stream_buffer_test.cpp
tests/unit/core/: cache_test.cpp  stream_buffer_test.cpp  victim_cache_test.cpp
tests/unit/policies/: nru_policy_test.cpp  write_policy_test.cpp
tests/unit/utils/: parallel_processing_test.cpp  visualization_test.cpp
tests/validation/: known_traces.cpp
tools/: README.md  cache_analyzer.cpp  performance_comparison.cpp  trace_generator.cpp
traces/: README.md  advanced_features.txt  comprehensive_test.txt  conflict_heavy.txt  matrix_multiply.txt  mixed_locality.txt  multiprocessor_coherence.txt  producer_consumer.txt  streaming_workload.txt  trace1.txt  trace2.txt  trace3.txt  trace4.txt  victim_cache_test.txt  write_intensive.txt  write_policy_test.txt
